Resolves: tdf#154308 if start center frame exists, use it as dialog parent

At least for the case the document is launched from the StartCenter, put
that StartCenter as the parent for any dialogs that may appear during
typedetection, this avoids such dialogs not getting associated with
the start center and going behind the dialog if the start center is
clicked while the dialog was appearing.

The start center is always recycled to become the next document if
it exists, so its window is the window the final document would
appear in if successful.

Change-Id: I75a92ff424aa0b9d5d6b808e2f7f1766a80fa50c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149989
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>